2008-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickCreateDirectoryPath): New function to
	create a directory path.  Will be used later.
	* configure.ac: Tweaks to produce a successful MinGW cross-compile.

2008-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Added a simple sentinel
	assertion to hopefully flush out any remaining cases where
	ExportImagePixelArea() writes past the end of its buffer.
	* magick/constitute.c (ExportImagePixelArea): GrayQuantum case for
	DirectClass pixels was sometimes writing a zero byte one past the
	end of the allocated buffer.  Thanks to Josue Gomes for reporting
	this bug.

2008-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{pcd.c,pcx.c,pdb.c,pict.c,stegano.c,wpg.c,xcf.c}:
	Warnings reduction.	
	* magick/{channel.c,image.c,unix_port.c,render.c}: Warnings
	reduction.
	* coders/mat.c: Convert C99 comments to C89 comments so code can
	compile with a C89 compiler.
	* coders/tiff.c (WriteTIFFImage): Add an assertion to enforce that
	the bytes output to the scanline is no more than the bytes
	allocated for the scanline.
	* NEWS.txt: Updated with latest NEWS.

2008-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Default to ZIP compression if
	available.  Ignore Image compression setting since the useful
	value (set by the user) usually comes from ImageInfo.
	* coders/png.c (WriteOnePNGImage): Fix progress monitor when
	writing PNG.
	* magick/channel.c (GetImageChannelDepth): Added progress monitor
	support.
	* magick/signature.c (SignatureImage): Added progress monitor support.
	* magick/image.c (GetImageDepth): Added progress monitor support.

2008-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool:  Update to libtool 2.2.2.
	* coders/jpeg.c: Convert more code to use size_t for sized values
	rather than long.
	* coders/wpg.c (InsertRow): Fix log format string specification.