@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020080407"
+#define public MagickPackageVersionAddendum ".020080408"
 #define public MagickPackageReleaseDate "unreleased"
