@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2008-04-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (MogrifyImageCommand): New -create-directories
+        option automatically creates subdirectories as needed when
+        -output-directory option is used.  This is useful when one
+        directory tree of files is being mogrified to a new tree.
+
+</UL>
+<p>
 2008-04-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
